--- a/test.html
+++ b/test.html
@@ -20,6 +20,7 @@ permalink: /test
 
 <div class="container">
   <h1>TEST</h1>
+<a href="url">https://rimworldgame.com/a>
 
   <p>https://rimworldgame.com/</p>
   </div>
