--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Test
-permalink: /test
+permalink: /Resources
 ---
 
 <style type="text/css" media="screen">
@@ -19,8 +19,14 @@ permalink: /test
 </style>
 
 <div class="container">
-  <h1>TEST</h1>
-<a href="url">https://rimworldgame.com/a>
+If you're having fun and want to check out rimworld's base game:
+<a href="url">https://rimworldgame.com </a>
+
+Rimworld materials:
+https://www.rimworldwiki.com/wiki/Materials
+
+Rimworld wiki:
+https://www.rimworldwiki.com/
 
   <p>https://rimworldgame.com/</p>
   </div>
