--- a/test.html
+++ b/test.html
@@ -19,14 +19,13 @@ permalink: /Resources
 </style>
 
 <div class="container">
-If you're having fun and want to check out rimworld's base game:
-<a href="url">https://rimworldgame.com </a>
+<p>If you're having fun and want to check out rimworld's base game:
+  <a href="url">https://rimworldgame.com </a></p>
 
-Rimworld materials:
-https://www.rimworldwiki.com/wiki/Materials
+<p>Rimworld materials:
+  https://www.rimworldwiki.com/wiki/Materials </p>
 
-Rimworld wiki:
-https://www.rimworldwiki.com/
+<p>Rimworld wiki:
+  https://www.rimworldwiki.com/ </p>
 
-  <p>https://rimworldgame.com/</p>
   </div>
