Update and rename test.html to Resources.html

--- a/Resources.html
+++ b/Resources.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Test
-permalink: /Resources
+title: links
+permalink: /links
 ---
 
 <style type="text/css" media="screen">
@@ -19,13 +19,14 @@ permalink: /Resources
 </style>
 
 <div class="container">
-<p>If you're having fun and want to check out rimworld's base game:
+<p>Rimworld the game:<br>
   <a href="url">https://rimworldgame.com </a></p>
 
-<p>Rimworld materials:
-  https://www.rimworldwiki.com/wiki/Materials </p>
+ <p>Rimworld wiki: <br>
+  <a href="url">https://www.rimworldwiki.com/ </a></p  
+  
+<p>Rimworld wiki/materials: <br>
+   <a href="url"> https://www.rimworldwiki.com/wiki/Materials </a></p>
 
-<p>Rimworld wiki:
-  https://www.rimworldwiki.com/ </p>
 
   </div>
