--- a/Resources.html
+++ b/Resources.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: links
-permalink: /links
+title: Links
+permalink: /Links
 ---
 
 <style type="text/css" media="screen">
@@ -25,8 +25,16 @@ permalink: /links
  <p>Rimworld wiki: <br>
   <a href="url">https://www.rimworldwiki.com/ </a></p  
   
-<p>Rimworld wiki/materials: <br>
+<p>Rimworld wiki/Apparel: <br>
+  <a href="url">https://www.rimworldwiki.com/wiki/Apparel</a></p>
+
+<p>Rimworld wiki/Materials: <br>
    <a href="url"> https://www.rimworldwiki.com/wiki/Materials </a></p>
 
+<p>Rimworld wiki/Traits: <br>
+  <a href="url">https://www.rimworldwiki.com/wiki/Traits</a></p>
+
+<p>Rimworld wiki/Weapons: <br>
+  <a href="url">https://www.rimworldwiki.com/wiki/Weapons</a></p>
 
   </div>
