--- a/Resources.html
+++ b/Resources.html
@@ -8,7 +8,7 @@ permalink: /Links
   .container {
     margin: 10px auto;
     max-width: 600px;
-    text-align: center;
+    text-align: left;
   }
   h1 {
     margin: 30px 0;
@@ -25,16 +25,16 @@ permalink: /Links
  <p>Rimworld wiki: <br>
   <a href="url">https://www.rimworldwiki.com/ </a></p  
   
-<p>Rimworld wiki/Apparel: <br>
+<p>Apparel: <br>
   <a href="url">https://www.rimworldwiki.com/wiki/Apparel</a></p>
 
-<p>Rimworld wiki/Materials: <br>
+<p>Materials: <br>
    <a href="url"> https://www.rimworldwiki.com/wiki/Materials </a></p>
 
-<p>Rimworld wiki/Traits: <br>
+<p>Traits: <br>
   <a href="url">https://www.rimworldwiki.com/wiki/Traits</a></p>
 
-<p>Rimworld wiki/Weapons: <br>
+<p>Weapons: <br>
   <a href="url">https://www.rimworldwiki.com/wiki/Weapons</a></p>
 
   </div>
