--- a/modlist.html
+++ b/modlist.html
@@ -8,6 +8,7 @@ permalink: /modlist
 <link rel="stylesheet" href="{{- 'assets/css/core.css' | relative_url -}} " />
 <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
+<p> we're playing with Rimworld base game, Royalty expansion, Ideology expansion and Biotech expansion </P> <br>
 <div id="mods">
     {%- include search.html
         id='mods'
