--- a/Resources.html
+++ b/Resources.html
@@ -37,4 +37,10 @@ permalink: /Links
 <p>Weapons: <br>
   <a href="url">https://www.rimworldwiki.com/wiki/Weapons</a></p>
 
+<p>Rockhett's Discord:<br>
+<a href="url"> https://discord.gg/drSAxwWPyN</a></p>
+
+<p>Rockhett's Twitch<br>
+<a href="url"> https://www.twitch.tv/rockhettsocks </a></p>
+
   </div>
