--- a/commands.html
+++ b/commands.html
@@ -8,6 +8,12 @@ permalink: /commands
 <link rel="stylesheet" href="{{- 'assets/css/core.css' | relative_url -}} "/>
 <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
+<p> Quick start: !buy pawn to add a pawn to the colony and join right away or !joinqueue to wait for a free pawn.</p><br>
+<P> !bal will show your current balance</p><br>
+<p>Syntax for specific purchases: !buy item[material,quality] amount <br>
+    Example: !buy armchair[megaslothwool,excellent] 1 </p>
+
+
 {%- assign showCommands = site.data.commands.size -%}
 
 {%- assign buy = "" -%}
