--- a/modlist.html
+++ b/modlist.html
@@ -8,7 +8,14 @@ permalink: /modlist
 <link rel="stylesheet" href="{{- 'assets/css/core.css' | relative_url -}} " />
 <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
-<p> We're playing with: Rimworld base game, Royalty expansion, Ideology expansion, Biotech expansion and the following mods:</P> <br>
+<p> We're playing with: 
+<ul> 
+    <li>Rimworld base game</li> 
+    <li>Royalty expansion</li>
+    <li>Ideology expansion</li>
+    <li>Biotech expansion and the following community mods:</li> </p>
+
+
 <div id="mods">
     {%- include search.html
         id='mods'
