--- a/commands.html
+++ b/commands.html
@@ -8,9 +8,11 @@ permalink: /commands
 <link rel="stylesheet" href="{{- 'assets/css/core.css' | relative_url -}} "/>
 <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
-<p> Quick start: !buy pawn to add a pawn to the colony and join right away or !joinqueue to wait for a free pawn.</p><br>
-<P> !bal will show your current balance</p><br>
-<p>Syntax for specific purchases: !buy item[material,quality] amount <br>
+<h1>Quick STartL </h1>
+<p>!buy pawn to add a pawn to the colony start playing <br>
+!joinqueue to wait for a free pawn.<br>
+!bal will show your current balance</p><br>
+<p>Syntax for specific purchases:<br> !buy item[material,quality] amount <br>
     Example: !buy armchair[megaslothwool,excellent] 1 </p>
 
 
