--- a/commands.html
+++ b/commands.html
@@ -8,12 +8,12 @@ permalink: /commands
 <link rel="stylesheet" href="{{- 'assets/css/core.css' | relative_url -}} "/>
 <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
-<h1>Quick STartL </h1>
+<h1>Quick Start </h1>
 <p>!buy pawn to add a pawn to the colony start playing <br>
 !joinqueue to wait for a free pawn.<br>
 !bal will show your current balance</p><br>
-<p>Syntax for specific purchases:<br> !buy item[material,quality] amount <br>
-    Example: !buy armchair[megaslothwool,excellent] 1 </p>
+<p>Syntax for specific purchases:<br> !buy item[material,quality] amount </p><br>
+ <p> Example: <br> !buy armchair[megaslothwool,excellent] 1 </p>
 
 
 {%- assign showCommands = site.data.commands.size -%}
