--- a/Resources.html
+++ b/Resources.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Links
-permalink: /Links
+title: Resources
+permalink: /Resources
 ---
 
 <style type="text/css" media="screen">
