--- a/commands.html
+++ b/commands.html
@@ -9,11 +9,11 @@ permalink: /commands
 <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
 <h1>Quick Start </h1>
-<p>!buy pawn to add a pawn to the colony start playing <br>
-!joinqueue to wait for a free pawn.<br>
-!bal will show your current balance</p><br>
+<p><b>!buy pawn</b> to add a pawn to the colony start playing <br>
+ <b>!joinqueue</b> to wait for a free pawn.<br>
+ <b>!bal</b> will show your current balance</p><br>
 <p>Syntax for specific purchases:<br> !buy item[material,quality] amount </p><br>
- <p> Example: <br> !buy armchair[megaslothwool,excellent] 1 </p>
+<p> <b>Example:</b> <br> !buy armchair[megaslothwool,excellent] 1 </p>
 
 
 {%- assign showCommands = site.data.commands.size -%}
