--- a/commands.html
+++ b/commands.html
@@ -12,7 +12,7 @@ permalink: /commands
 <p><b>!buy pawn</b> to add a pawn to the colony start playing <br>
  <b>!joinqueue</b> to wait for a free pawn.<br>
  <b>!bal</b> will show your current balance</p><br>
-<p>Syntax for specific purchases:<br> !buy item[material,quality] amount </p><br>
+<p><b>Syntax for specific purchases:</b><br> !buy item[material,quality] amount </p><br>
 <p> <b>Example:</b> <br> !buy armchair[megaslothwool,excellent] 1 </p>
 
 
