--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@ title: Store
 <script src="{{- 'assets/js/filter.js' | relative_url -}}"></script>
 <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
+<p><b>Syntax for specific purchases:</b><br> !buy item[material,quality] amount </p><br>
+<p> <b>Example:</b> <br> !buy armchair[megaslothwool,excellent] 1 </p>
+
 {%- assign itemsForDisplay = '' | split: ',' -%}
 {%- assign eventsForDisplay = site.data.StoreIncidents.incitems | where_exp: "incident", "incident.price > 0" | sort: "abr" -%}
 {%- assign animalsForDisplay = site.data.StoreItems.items | where: "category", "Animal" | where_exp: "animal", "animal.price > 0" | sort: "abr" -%}
