--- a/story.html
+++ b/story.html
@@ -21,7 +21,7 @@ permalink: /Story
 <div class="container">
 <p>Story Logs, info and links will go here</p>
 
-<p>6 colonists land in a Tropical Rainforest full of caves. 
+<p>6 colonists land in a Tropical Rainforest full of caves: 
 <ul> 
 <li>Vanivan</li>
 <li>Escapade2d17</li>
@@ -30,6 +30,9 @@ permalink: /Story
 <li>Froggletaint</li>
 <li>RockhettSocks</li>
 </ul>
+
+  <b>Difficulty:</b> Strive to survive <br>
+  <b>Storyteller:</b> Chat votes
 </p>
   </div>
 
