--- a/Charity.html
+++ b/Charity.html
@@ -1,1 +1,25 @@
+---
+layout: page
+title: Charity
+permalink: /Charity
+---
+
+<style type="text/css" media="screen">
+  .container {
+    margin: 10px auto;
+    max-width: 600px;
+    text-align: left;
+  }
+  h1 {
+    margin: 30px 0;
+    font-size: 4em;
+    line-height: 1;
+    letter-spacing: -1px;
+  }
+</style>
+
+<div class="container">
+<p>Info about Charity events goes here</p>
+
+  </div>
 
