--- a/Charity.html
+++ b/Charity.html
@@ -21,5 +21,9 @@ permalink: /Charity
 <div class="container">
 <p>Info about Charity events goes here</p>
 
+<blockquote class="imgur-embed-pub" lang="en" data-id="a/RuzJPm3"  ><a href="//imgur.com/a/RuzJPm3">Rimworld Rescue: MSF/Doctors without borders charity stream</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+
+<p> Rimworld Rescue Special Event:Feb 10 - Feb 11
+
   </div>
 
