--- a/story.html
+++ b/story.html
@@ -29,6 +29,17 @@ permalink: /Story
 <li>Tollpanzer</li>
 <li>Froggletaint</li>
 <li>RockhettSocks</li>
+
+The following colonists join us in our adventures:
+<li>VoodooLilium</li>
+<li>Lamellamallama</li>
+<li>Blueking99</li>
+<li>Dark_Prime459</li>
+<li>Reznovo the impid child [nonplayer paw]</li>
+
+We voted to rescue Reznovo, an impid child.
+<li></li>
+
 </ul>
 
   <b>Difficulty:</b> Strive to survive <br>
