--- a/story.html
+++ b/story.html
@@ -21,7 +21,8 @@ permalink: /Story
 <div class="container">
 <p>Story Logs, info and links will go here</p>
 
-<p>6 colonists land in a Tropical Rainforest full of caves: 
+  <h>Episode1</h>
+<p> 6 colonists land in a Tropical Rainforest full of caves with hopes of survival: 
 <ul> 
 <li>Vanivan</li>
 <li>Escapade2d17</li>
@@ -30,20 +31,21 @@ permalink: /Story
 <li>Froggletaint</li>
 <li>RockhettSocks</li>
 
-The following colonists join us in our adventures:
+Episode 2 Colonists:
 <li>VoodooLilium</li>
 <li>Lamellamallama</li>
 <li>Blueking99</li>
 <li>Dark_Prime459</li>
 <li>Reznovo the impid child [nonplayer paw]</li>
 
-We voted to rescue Reznovo, an impid child.
+Colony voted to rescue Reznovo, an impid child.
 <li></li>
 
 </ul>
 
   <b>Difficulty:</b> Strive to survive <br>
   <b>Storyteller:</b> Chat votes
+  <b>Player total:</b> 10
 </p>
   </div>
 
