--- a/story.html
+++ b/story.html
@@ -21,7 +21,7 @@ permalink: /Story
 <div class="container">
 <p>Story Logs, info and links will go here</p>
 
-  <h>Episode1</h>
+  <h><b>Episode1</b></h>
 <p> 6 colonists land in a Tropical Rainforest full of caves with hopes of survival: 
 <ul> 
 <li>Vanivan</li>
@@ -39,7 +39,7 @@ Episode 2 Colonists:
 <li>Reznovo the impid child [nonplayer paw]</li>
 
 Colony voted to rescue Reznovo, an impid child.
-<li></li>
+
 
 </ul>
 
