--- a/story.html
+++ b/story.html
@@ -31,15 +31,12 @@ permalink: /Story
 <li>Froggletaint</li>
 <li>RockhettSocks</li>
 
-Episode 2 Colonists:
+  <h> <b>Episode 2</b></h> The colony starts to dig it's base. Colony voted to rescue Reznovo, an impid child.  
 <li>VoodooLilium</li>
 <li>Lamellamallama</li>
 <li>Blueking99</li>
 <li>Dark_Prime459</li>
 <li>Reznovo the impid child [nonplayer paw]</li>
-
-Colony voted to rescue Reznovo, an impid child.
-
 
 </ul>
 
