--- a/story.html
+++ b/story.html
@@ -29,9 +29,9 @@ permalink: /Story
 <li>Tistao</li>
 <li>Tollpanzer</li>
 <li>Froggletaint</li>
-<li>RockhettSocks</li>
+  <li>RockhettSocks</li></p>
 
-  <h> <b>Episode 2</b></h> The colony starts to dig it's base. Colony voted to rescue Reznovo, an impid child.  
+  <p><h> <b>Episode 2</b></h> The colony starts to dig it's base. Colony voted to rescue Reznovo, an impid child.  
 <li>VoodooLilium</li>
 <li>Lamellamallama</li>
 <li>Blueking99</li>
