--- a/story.html
+++ b/story.html
@@ -29,7 +29,11 @@ permalink: /Story
 <li>Tistao</li>
 <li>Tollpanzer</li>
 <li>Froggletaint</li>
-  <li>RockhettSocks</li></p>
+  <li>RockhettSocks</li>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/So2ZPiqPw98" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+</p>
+
 
   <p><h> <b>Episode 2</b></h> The colony starts to dig it's base. Colony voted to rescue Reznovo, an impid child.  
 <li>VoodooLilium</li>
