--- a/story.html
+++ b/story.html
@@ -22,6 +22,8 @@ permalink: /Story
 <p>Story Logs, info and links will go here</p>
 
   <h><b>Episode1</b></h>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/So2ZPiqPw98" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 <p> 6 colonists land in a Tropical Rainforest full of caves with hopes of survival: 
 <ul> 
 <li>Vanivan</li>
@@ -29,13 +31,12 @@ permalink: /Story
 <li>Tistao</li>
 <li>Tollpanzer</li>
 <li>Froggletaint</li>
-  <li>RockhettSocks</li>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/So2ZPiqPw98" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-</p>
+  <li>RockhettSocks</li></p>
 
 
-  <p><h> <b>Episode 2</b></h> The colony starts to dig it's base. Colony voted to rescue Reznovo, an impid child.  
+  <p><h> <b>Episode 2</b></h> 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ttSsgLp4nvw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+The colony starts to dig it's base. Colony voted to rescue Reznovo, an impid child.  
 <li>VoodooLilium</li>
 <li>Lamellamallama</li>
 <li>Blueking99</li>
@@ -45,7 +46,7 @@ permalink: /Story
 </ul>
 
   <b>Difficulty:</b> Strive to survive <br>
-  <b>Storyteller:</b> Chat votes
+  <b>Storyteller:</b> Chat votes <br>
   <b>Player total:</b> 10
 </p>
   </div>
