--- a/story.html
+++ b/story.html
@@ -41,7 +41,7 @@ The colony starts to dig it's base. Colony voted to rescue Reznovo, an impid chi
 <li>Lamellamallama</li>
 <li>Blueking99</li>
 <li>Dark_Prime459</li>
-<li>Reznovo the impid child [nonplayer paw]</li>
+<li>Reznovo the impid child [nonplayer pawn]</li>
 
 </ul>
 
