--- a/story.html
+++ b/story.html
@@ -20,6 +20,10 @@ permalink: /Story
 
 <div class="container">
 <p>Story Logs, info and links will go here</p>
+ <b>Difficulty:</b> Strive to survive <br>
+  <b>Storyteller:</b> Chat votes <br>
+  <b>Player total:</b> 10
+
 
   <h><b>Episode1</b></h>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/So2ZPiqPw98" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
