--- a/story.html
+++ b/story.html
@@ -22,7 +22,7 @@ permalink: /Story
 <p>Story Logs, info and links will go here</p>
  <b>Difficulty:</b> Strive to survive <br>
   <b>Storyteller:</b> Chat votes <br>
-  <b>Player total:</b> 10
+  <b>Player total:</b> 10 <br>
 
 
   <h><b>Episode1</b></h>
