--- a/story.html
+++ b/story.html
@@ -47,6 +47,9 @@ The colony starts to dig it's base. Colony voted to rescue Reznovo, an impid chi
 <li>Dark_Prime459</li>
 <li>Reznovo the impid child [nonplayer pawn]</li>
 
+<p><h> <b>Episode 3</b></h> 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/XXiZ5VwBHHQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 </ul>
 
 </p>
