--- a/story.html
+++ b/story.html
@@ -50,6 +50,9 @@ The colony starts to dig it's base. Colony voted to rescue Reznovo, an impid chi
 <p><h> <b>Episode 3</b></h> 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/XXiZ5VwBHHQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+<p><h> <b>Episode 4</b></h> 
+  <li>Yamisnuggles</li>
+
 </ul>
 
 </p>
