--- a/story.html
+++ b/story.html
@@ -54,6 +54,10 @@ The colony starts to dig it's base. Colony voted to rescue Reznovo, an impid chi
 <iframe width="560" height="315" src="https://www.youtube.com/embed/GHxtW_NFpGU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   <li>Yamisnuggles</li>
 
+<p><h> <b>Episode 5</b></h> 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/eUz3_FEQTmQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <li> Seraph [ man in black/npc] </li>
+
 </ul>
 
 </p>
