--- a/story.html
+++ b/story.html
@@ -58,6 +58,10 @@ The colony starts to dig it's base. Colony voted to rescue Reznovo, an impid chi
 <iframe width="560" height="315" src="https://www.youtube.com/embed/eUz3_FEQTmQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   <li> Seraph [ man in black/npc] </li>
 
+<p><h> <b>Episode 6</b></h>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Kl5RnKATOc0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<p><h> <b>Episode 5</b></h>
+
 </ul>
 
 </p>
