--- a/story.html
+++ b/story.html
@@ -60,7 +60,8 @@ The colony starts to dig it's base. Colony voted to rescue Reznovo, an impid chi
 
 <p><h> <b>Episode 6</b></h>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Kl5RnKATOc0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-<p><h> <b>Episode 5</b></h>
+<p><h> <b>Episode 7</b></h>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/hk0eLUMJs6c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 </ul>
 
