--- a/story.html
+++ b/story.html
@@ -47,22 +47,22 @@ The colony starts to dig it's base. Colony voted to rescue Reznovo, an impid chi
 <li>Dark_Prime459</li>
 <li>Reznovo the impid child [nonplayer pawn]</li>
 
-<p><h> <b>Episode 3</b></h> 
+<p><h> <b>Episode 3</p></h> 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/XXiZ5VwBHHQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-<p><h> <b>Episode 4</b></h> 
+<p><h> <b>Episode 4</p></h> 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/GHxtW_NFpGU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   <li>Yamisnuggles</li>
 
-<p><h> <b>Episode 5</b></h> 
+<p><h> <b>Episode 5</p></h> 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/eUz3_FEQTmQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   <li> Seraph [ man in black/npc] </li>
 
-<p><h> <b>Episode 6</b></h>
+<p><h> <b>Episode 6</p></h>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Kl5RnKATOc0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-<p><h> <b>Episode 7</b></h>
+<p><h> <b>Episode 7</p></h>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/hk0eLUMJs6c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
+  <p><h>Episode 8</h></p>
 </ul>
 
 </p>
