--- a/story.html
+++ b/story.html
@@ -60,9 +60,18 @@ The colony starts to dig it's base. Colony voted to rescue Reznovo, an impid chi
 
 <p><h> <b>Episode 6</p></h>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Kl5RnKATOc0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-<p><h> <b>Episode 7</p></h>
+
+  <p><h> <b>Episode 7</p></h>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/hk0eLUMJs6c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  
   <p><h>Episode 8</h></p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/7w96g1cQPc4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  
+  <p><h>Episode 9</h></p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/WaXc2yhQigs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  
+   <p><h>Episode 10</h></p>
+  
 </ul>
 
 </p>
