--- a/story.html
+++ b/story.html
@@ -71,7 +71,28 @@ The colony starts to dig it's base. Colony voted to rescue Reznovo, an impid chi
   <iframe width="560" height="315" src="https://www.youtube.com/embed/WaXc2yhQigs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   
    <p><h>Episode 10</h></p>
-  
+
+  <p><h>Episode 11</h></p>
+
+  <p><h>Episode 12</h></p>
+
+  <p><h>Episode 13</h></p>
+
+  <p><h>Episode 14</h></p>
+
+  <p><h>Episode 15</h></p>
+
+  <p><h>Episode 16</h></p>
+
+  <p><h>Episode 17</h></p>
+
+  <p><h>Episode 18</h></p>
+
+  <p><h>Episode 19</h></p>
+
+  <p><h>Episode 20</h></p>
+
+
 </ul>
 
 </p>
