--- a/story.html
+++ b/story.html
@@ -71,24 +71,34 @@ The colony starts to dig it's base. Colony voted to rescue Reznovo, an impid chi
   <iframe width="560" height="315" src="https://www.youtube.com/embed/WaXc2yhQigs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   
    <p><h>Episode 10</h></p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/-rtq5qaKArY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
   <p><h>Episode 11</h></p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/fNYIRz2Bbgo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
   <p><h>Episode 12</h></p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/fNYIRz2Bbgo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
   <p><h>Episode 13</h></p>
-
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/oiK7_-tgUGE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  
   <p><h>Episode 14</h></p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/hJOsTbH4cZ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
   <p><h>Episode 15</h></p>
-
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/hJOsTbH4cZ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  
   <p><h>Episode 16</h></p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/4-L0meQx910" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
   <p><h>Episode 17</h></p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/lMoy4d7hOZc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
   <p><h>Episode 18</h></p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/GLPd9ASJvPw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-  <p><h>Episode 19</h></p>
+  <p><h>Episode 19 - Moving Day!</h></p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/sRWgVnJ0-RM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
   <p><h>Episode 20</h></p>
 
